# proyecto_estructura_de_Datos

./: Analizador_Flujo_Hector.h  CLAUDE.md  README.md  documentacion_miMicro.html  readme.md
CLASES BRUNO/: GestorPagos.h  TarjetaTransporte.h
CLASES CRISTHIAN/: OptimizadorRuta.h  Ruta.h
CLASES HECTOR/: Analizador_Flujo_Hector.h  Reporte_Seguridad_Hector.h  main.cpp
CLASES JAVIER/: GestorGPS.h  PilaHistorial.h
CLASES ROBERTO/: ListaPasajeros.h  Micro.h
CLASES SAMUEL/: ColaEspera.h  NotificacionAlerta.h  TiempoEstimado.h
PROYECTO ESTRUCTURA/CLASES BRUNO/: persona.h
PROYECTO ESTRUCTURA/CLASES CRISTHIAN/: GrafoParadas.h
PROYECTO ESTRUCTURA/CLASES HECTOR/: main.cpp
PROYECTO ESTRUCTURA/CLASES JAVIER/: Parada.h
PROYECTO ESTRUCTURA/CLASES ROBERTO/: SensorPuerta.h
mimicro-app/: .env.example  .gitignore
mimicro-app/backend/: create_icons.py  main.py  requirements.txt
mimicro-app/backend/MODULO_BRUNO/: __init__.py  schemas.py
mimicro-app/backend/MODULO_CRISTHIAN/: __init__.py  schemas.py
mimicro-app/backend/MODULO_HECTOR/: __init__.py
mimicro-app/backend/MODULO_JAVIER/: __init__.py
mimicro-app/backend/MODULO_ROBERTO/: __init__.py  schemas.py
mimicro-app/backend/MODULO_SAMUEL/: __init__.py  schemas.py
mimicro-app/backend/cpp_core/: CMakeLists.txt  bindings.cpp  setup.py
mimicro-app/backend/database/: migration_lineas.sql  schema.sql  seed.sql
mimicro-app/backend/frontend/: index.html
mimicro-app/frontend/: App.js  app.json  index.html  metro.config.js  package-lock.json  package.json  vite.config.js
mimicro-app/frontend/src/: App.jsx  (+1 more)
(+164 files in other folders)
